Fixed overflow issue

--- a/assets/styles/components/_achievement-and-image.scss
+++ b/assets/styles/components/_achievement-and-image.scss
@@ -1,24 +1,23 @@
-.achievement_image {
-    position: relative;
-    height: 200px;
+.achievement_grid {
+    min-width: max-content;
 }
 
 .achievement_img {
     border-radius:50%; 
     position: relative; 
-    width: 250px; 
-    height: 250px; 
+    width: 20rem; 
+    height: 20rem; 
     overflow: hidden; 
     object-fit: cover;
-}
-
-.achievement_text {
-    margin-left: 5%;
-    max-width: 600px;
 }
 
 .achievement_border {
     border-left-style: solid;
     border-color: var(--sub-color); 
     border-width: 4px;
+}
+
+.achievement_text_grid {
+    position: relative;
+    top: 2.4rem;
 }
